--- a/templates/home.html
+++ b/templates/home.html
@@ -84,7 +84,7 @@
               <br>
               <br>
               <p class='one'> If beverage is others, specify</p>
-              <input type="text" class="form-control" name="Alcohol_others" placeholder="What is your alcohol poison? ">
+              <input type="text" class="form-control" name="Alcohol_others" placeholder="Type... ">
             </div>
 
             <div class="form-group col-md-6">
@@ -100,7 +100,7 @@
               <br>
               <br>
               <p class='one'> If soft drink is others, specify</p>
-              <input type="text" class="form-control" name="soft_others" placeholder="What type of soft drink? ">
+              <input type="text" class="form-control" name="soft_others" placeholder="Type... ">
             </div>
           </div>
           <br>
