--- a/templates/result.html
+++ b/templates/result.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav class="navbar navbar-light" style="background-color: #003f5c;">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="#">
       <h4><span class="highlight">Gender Prediction App</span></h4>
     </a>
     <!-- <img src="" alt="hypepperameter" id="logo"> -->
